--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.pythonPath": "/home/raz1/anaconda3/bin/python"
+    "python.pythonPath": "/home/raz1/anaconda3/bin/python",
+    "terminal.integrated.env.linux": {"PYTHONPATH": "${workspaceFolder}"},
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
+
 }
+
